Rename simulations to projects and remove experiment view
