# web-server/opendc/api/v2/experiments/experimentId/test_endpoint.py
@@ -7,7 +7,7 @@ def test_get_experiment_non_existing(client, mocker):
 
 
 def test_get_experiment_no_authorizations(client, mocker):
-    mocker.patch.object(DB, 'fetch_one', return_value={'simulationId': '1', 'authorizations': []})
+    mocker.patch.object(DB, 'fetch_one', return_value={'projectId': '1', 'authorizations': []})
     res = client.get('/api/v2/experiments/1')
     assert '403' in res.status
 
@@ -16,10 +16,10 @@ def test_get_experiment_not_authorized(client, mocker):
     mocker.patch.object(DB,
                         'fetch_one',
                         return_value={
-                            'simulationId': '1',
+                            'projectId': '1',
                             '_id': '1',
                             'authorizations': [{
-                                'simulationId': '2',
+                                'projectId': '2',
                                 'authorizationLevel': 'OWN'
                             }]
                         })
@@ -31,10 +31,10 @@ def test_get_experiment(client, mocker):
     mocker.patch.object(DB,
                         'fetch_one',
                         return_value={
-                            'simulationId': '1',
+                            'projectId': '1',
                             '_id': '1',
                             'authorizations': [{
-                                'simulationId': '1',
+                                'projectId': '1',
                                 'authorizationLevel': 'EDIT'
                             }]
                         })
@@ -60,9 +60,9 @@ def test_update_experiment_not_authorized(client, mocker):
                         'fetch_one',
                         return_value={
                             '_id': '1',
-                            'simulationId': '1',
+                            'projectId': '1',
                             'authorizations': [{
-                                'simulationId': '1',
+                                'projectId': '1',
                                 'authorizationLevel': 'VIEW'
                             }]
                         })
@@ -79,9 +79,9 @@ def test_update_experiment(client, mocker):
                         'fetch_one',
                         return_value={
                             '_id': '1',
-                            'simulationId': '1',
+                            'projectId': '1',
                             'authorizations': [{
-                                'simulationId': '1',
+                                'projectId': '1',
                                 'authorizationLevel': 'OWN'
                             }]
                         })
@@ -93,20 +93,20 @@ def test_update_experiment(client, mocker):
     assert '200' in res.status
 
 
-def test_delete_simulation_non_existing(client, mocker):
+def test_delete_project_non_existing(client, mocker):
     mocker.patch.object(DB, 'fetch_one', return_value=None)
     assert '404' in client.delete('/api/v2/experiments/1').status
 
 
-def test_delete_simulation_different_user(client, mocker):
+def test_delete_project_different_user(client, mocker):
     mocker.patch.object(DB,
                         'fetch_one',
                         return_value={
                             '_id': '1',
-                            'simulationId': '1',
+                            'projectId': '1',
                             'googleId': 'other_test',
                             'authorizations': [{
-                                'simulationId': '1',
+                                'projectId': '1',
                                 'authorizationLevel': 'VIEW'
                             }]
                         })
@@ -114,16 +114,16 @@ def test_delete_simulation_different_user(client, mocker):
     assert '403' in client.delete('/api/v2/experiments/1').status
 
 
-def test_delete_simulation(client, mocker):
+def test_delete_project(client, mocker):
     mocker.patch.object(DB,
                         'fetch_one',
                         return_value={
                             '_id': '1',
-                            'simulationId': '1',
+                            'projectId': '1',
                             'googleId': 'test',
                             'experimentIds': ['1'],
                             'authorizations': [{
-                                'simulationId': '1',
+                                'projectId': '1',
                                 'authorizationLevel': 'OWN'
                             }]
                         })
