# web-server/opendc/api/v2/topologies/topologyId/test_endpoint.py
@@ -6,9 +6,9 @@ def test_get_topology(client, mocker):
                         'fetch_one',
                         return_value={
                             '_id': '1',
-                            'simulationId': '1',
+                            'projectId': '1',
                             'authorizations': [{
-                                'simulationId': '1',
+                                'projectId': '1',
                                 'authorizationLevel': 'EDIT'
                             }]
                         })
@@ -26,9 +26,9 @@ def test_get_topology_not_authorized(client, mocker):
                         'fetch_one',
                         return_value={
                             '_id': '1',
-                            'simulationId': '1',
+                            'projectId': '1',
                             'authorizations': [{
-                                'simulationId': '2',
+                                'projectId': '2',
                                 'authorizationLevel': 'OWN'
                             }]
                         })
@@ -37,7 +37,7 @@ def test_get_topology_not_authorized(client, mocker):
 
 
 def test_get_topology_no_authorizations(client, mocker):
-    mocker.patch.object(DB, 'fetch_one', return_value={'simulationId': '1', 'authorizations': []})
+    mocker.patch.object(DB, 'fetch_one', return_value={'projectId': '1', 'authorizations': []})
     res = client.get('/api/v2/topologies/1')
     assert '403' in res.status
 
@@ -56,9 +56,9 @@ def test_update_topology_not_authorized(client, mocker):
                         'fetch_one',
                         return_value={
                             '_id': '1',
-                            'simulationId': '1',
+                            'projectId': '1',
                             'authorizations': [{
-                                'simulationId': '1',
+                                'projectId': '1',
                                 'authorizationLevel': 'VIEW'
                             }]
                         })
@@ -76,9 +76,9 @@ def test_update_topology(client, mocker):
                         'fetch_one',
                         return_value={
                             '_id': '1',
-                            'simulationId': '1',
+                            'projectId': '1',
                             'authorizations': [{
-                                'simulationId': '1',
+                                'projectId': '1',
                                 'authorizationLevel': 'OWN'
                             }]
                         })
@@ -97,11 +97,11 @@ def test_delete_topology(client, mocker):
                         'fetch_one',
                         return_value={
                             '_id': '1',
-                            'simulationId': '1',
+                            'projectId': '1',
                             'googleId': 'test',
                             'topologyIds': ['1'],
                             'authorizations': [{
-                                'simulationId': '1',
+                                'projectId': '1',
                                 'authorizationLevel': 'OWN'
                             }]
                         })
